monitoring/efk/kibana/ingress.yaml
# monitoring/efk/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: monitoring
spec:
  rules:
    - host: kibana.jofotara.next.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
